fixed gap

--- a/src/sass/Category_of_products/category-furniture.scss
+++ b/src/sass/Category_of_products/category-furniture.scss
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     border: 0;
-    padding: 0 0 5px 0;
+    padding: 15px 0 15px 0;
     background: none;
     cursor: pointer;
     outline: none;
