--- a/src/sass/Category_of_products/title.scss
+++ b/src/sass/Category_of_products/title.scss
@@ -6,7 +6,7 @@
   text-align: center;
   font-size: 46px;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 35px;
   @media (max-width: 767px) {
     font-size: 37px;
   }
